src/tests/krate/publish/snapshots/integration__krate__publish__validation__bad_name-3.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "the crate name `aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa` is too long (max 64 characters)"
    }
  ]
}
