src/tests/krate/publish/snapshots/integration__krate__publish__validation__bad_name.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "crate name cannot be empty"
    }
  ]
}
